<?xml version="1.0" encoding="utf-8"?><!--

    Copyright (C) 2010 Sopra Steria Group (movalys.support@soprasteria.com)

    This file is part of Movalys MDK.
    Movalys MDK is free software: you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    Movalys MDK is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU Lesser General Public License for more details.
    You should have received a copy of the GNU Lesser General Public License
    along with Movalys MDK. If not, see <http://www.gnu.org/licenses/>.

-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mdk="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/mdkwidget_label_error_layout" />

    <EditText
        android:id="@+id/component_seekbar_edittext"
        style="?attr/mdkValueEditTextStyle"
        android:layout_width="@dimen/mdkwidget_seekbar_edittext_width"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/below_view"
        android:layout_marginLeft="@dimen/mdkwidget_seekbar_edittext_margin"
        android:layout_marginStart="@dimen/mdkwidget_seekbar_edittext_margin"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:singleLine="true" />


    <com.soprasteria.movalysmdk.widget.basic.MDKSeekBar
        android:id="@id/component_internal"
        style="?attr/mdkSeekBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/component_seekbar_edittext"
        android:layout_below="@+id/below_view"
        android:layout_toLeftOf="@id/component_seekbar_edittext"
        android:layout_toStartOf="@id/component_seekbar_edittext"
        android:maxHeight="1000000dp"
        mdk:attachedEditText="@id/component_seekbar_edittext"
        mdk:errorId="@id/component_error"
        mdk:labelId="@id/component_label" />


</merge>
